--- a/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/02_Style-Lists/style-lists.html
+++ b/SoftUni HTML & CSS/03. 2023.05.16. CSS & Typography/02_Style-Lists/style-lists.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <article>
-            <h2> HTML Unordered list</h2>
+            <h2> HTML Unordered List</h2>
 
             <ul>
                 <li>Hyper is the opposite of linear. It used to be that computer programs had to move in a linear fashion. This before this, this before this, and so on. HTML does not hold to that pattern and allows the person viewing the World Wide Web page
@@ -20,12 +20,12 @@
         </article>
 
         <article>
-            <h2>Reversed list</h2>
+            <h2>Reversed List</h2>
 
             <ol reversed>
                 <li>Alt-text is not a description of an image, but a replacement for the image in case it is not displayed.
                 </li>
-                <li>An ampersand character “&” must always be escaped like this: “&” – even in URLs.</li>
+                <li>An ampersand character “&” must always be escaped like this: “&” - even in URLs.</li>
 
             </ol>
         </article>
