--- a/SoftUni HTML & CSS/04. 2023.05.23. CSS Box Model/03_Brazil-Coffee/index.html
+++ b/SoftUni HTML & CSS/04. 2023.05.23. CSS Box Model/03_Brazil-Coffee/index.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11180825427"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11180825427');
+</script>
 </head>
+
+
 <body>
 
     <section>
