02_Position-playground - Solved 100/100

--- a/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/02_Position-playground/index.html
+++ b/SoftUni HTML & CSS/06. 2023.06.06. Grid and Positioning/02_Position-playground/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
 
-    <div class="viewport">
+    <div class="viewport first">
 
-        <section class="card first">
+        <section class="card">
             <img src="./images/picture1.jpg" alt="asd">
         </section>
     </div>
 
-    <div class="viewport">
+    <div class="viewport second">
         <section class="card second">
             <img src="./images/picture2.jpg" alt="asd">
         </section>
