--- a/SoftUni HTML & CSS/99. Exams/HTML & CSS Retake Exam - 21 December 2022/02. Luxury/luxury.html
+++ b/SoftUni HTML & CSS/99. Exams/HTML & CSS Retake Exam - 21 December 2022/02. Luxury/luxury.html
@@ -3,9 +3,11 @@
 
 <head>
     <title>Apartment</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./responsive.css">
+   
     <link rel="stylesheet" type="text/css" href="./luxury.css">
+    <link rel="stylesheet" href="./responsive.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
